--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "employee-management/backend_task"]
 	path = employee-management/backend_task
 	url = https://github.com/AhmedMEladawy/BackendTask
+[submodule "backend_task"]
+	path = backend_task
+	url = https://github.com/AhmedMEladawy/BackendTask
